syntax = "proto3";

package types;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/snapshot/storage/protos";

////////////////////////////////////////////////////////////////////////////////

message DeletingSnapshotKey {
    google.protobuf.Timestamp DeletingAt = 1;
    string SnapshotId = 2;
}
